--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "max-len": "warn"
+    }
   },
   "browserslist": [
     "> 1%",
